--- a/conf.yml
+++ b/conf.yml
@@ -58,19 +58,17 @@ tracing.propagation.keys:
   - services
 
 goauth:
-  resource: 
-    - name: "Manage File" 
-      code: "manage-file"
-    - name: "Manage Folder" 
-      code: "manage-folder"
-  path: 
-    - url: "/file"
-      method: "PUT"
-      type: "PROTECTED"
-      desc: "Upload file"
-      code: "manage-file"
-    - url: "/file"
-      method: "GET"
-      type: "PUBLIC"
-      desc: "Download file"
-      code: "manage-file"
+  client:
+    enabled: true
+  resource:
+    - name: "Manage files"
+      code: "manage-files"
+      path: 
+        - url: "/open/api/file/upload/duplication/preflight"
+          desc: "Preflight check for duplicate file uploads"
+        - url: "/open/api/file/parent"
+          desc: "User fetch parent file info"
+        - url: "/open/api/file/move-to-dir"
+          desc: "Upload file"
+    - name: "Admin file service"
+      code: "admin-file-service"
